tests/ui/reborrow/coerce-shared-wrong-generic.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-wrong-generic.rs:14:5
   |
LL |     value: &'a mut T,
   |     ---------------- source field `value` has type `&'a mut T`
...
LL |     value: &'a U,
   |     ^^^^^^^^^^^^ target field `value` has type `&'a U`
...
LL | impl<'a, T, U> CoerceShared<GenericRef<'a, T, U>> for GenericMut<'a, T, U> {}
   | ----------------------------------------------------------------------------- required by this `CoerceShared` implementation

error: aborting due to 1 previous error

